namespace client_generator.App.Commands
{
    public interface ICommand
    {

        void Execute();

    }
}
