namespace client_generator.App.Windows.MenuWindowStates
{
    public interface IMenuWindowState
    {

        void SetWindow(MenuWindow window);

        void DisplayMenu();

    }
}
